<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListPreference
        android:title="@string/prefs_hint_title"
        android:key="@string/prefs_hint_key"
        android:entries="@array/prefs_hint_entries"
        android:entryValues="@array/prefs_hint_values"
        android:defaultValue="@string/prefs_hint_default"
        />

    <CheckBoxPreference
        android:title="@string/prefs_sound_title"
        android:key="@string/prefs_sound_key"
        android:defaultValue="@string/prefs_sound_default"
        />

    <ListPreference
        android:title="@string/prefs_backdrops_title"
        android:key="@string/prefs_backdrops_key"
        android:entries="@array/prefs_backdrops_entries"
        android:entryValues="@array/prefs_backdrops_values"
        android:defaultValue="@string/prefs_backdrops_default"
        />
    
    <com.kidlearn.Jigsaw3d.Preferences.StatReset
            android:title="@string/prefs_reset_title"
            android:dialogMessage="@string/prefs_reset_prompt"
            android:positiveButtonText="@string/prefs_reset_ok" />
            
</PreferenceScreen>